# mapml

./: .gitignore  Makefile.am  Maple_check.mw  README.md  configure.ac  test mapml.mw
example/: Makefile  dum  dum.c
macros/: gmp-check.m4  mpfr-check.m4
maple/: Makefile  Makefile.am  Makefile.save  conversion.c  conversion.h  dum.c  mapml.mpl  mapml.mpl.bak
old/: configure.save
old/macros/: flint-check.m4  gmp-check.m4  linbox-misc.m4  mpfr-check.m4
src/: Makefile.am  conversion.c  conversion.h  dummy_export.c  mapml.h  matpoly_export.c  matpoly_export.h
